# nbb

./: .appveyor.yml  .gitattributes  .gitignore  .isort.cfg  .pre-commit-config.yaml  .travis.yml  MANIFEST.in  README.md  requirements-dev.txt  requirements.txt  setup.cfg  setup.py
nbb/: __init__.py  _version.py  nbb.py
tests/: test__cell_methods.py
