[metadata]
name = nbb
description = Notebook beautifier: runs isort and black on your notebook cells
author = Filipe Fernandes
author_email = ocefpaf@gmail.com
url = https://github.com/ocefpaf/nbb
long_description_content_type = text/markdown
long_description = file: README.md
license = BSD-3-Clause
license_file = LICENSE.txt
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Science/Research
    Operating System :: OS Independent
    License :: OSI Approved :: BSD License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Scientific/Engineering

[options.entry_points]
console_scripts =
    nbb = nbb.nbb:nbb

[options]
zip_safe = True
install_requires =
     black
     easyargs
     isort
     notebook
python_requires = >=3.6
packages = find:

[sdist]
formats = gztar

[check-manifest]
ignore =
    *.yml
    .coveragerc
    Makefile
    docs
    docs/*
    *.enc
    notebooks
    notebooks/*
    tests
    tests/*

[flake8]
max-line-length = 105
select = C,E,F,W,B,B950
ignore = E203, E501, W503